--- a/css/main.css
+++ b/css/main.css
@@ -545,7 +545,7 @@ form,
 }
 
 .line-scale-pulse-out > div {
-    background-color: #39b54a;
+    background-color: #ff0000;
     width: 4px;
     height: 35px;
     border-radius: 2px;
