--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 /* =================================================================== 
- *
- *  Glint v1.0 Main Stylesheet
- *  11-20-2017
+
  *  ------------------------------------------------------------------
  *
  *  TOC:
@@ -502,7 +500,7 @@ form,
 }
 
 .pace .pace-progress {
-    background: #39b54a;
+    background: #ff0000;
     position: fixed;
     z-index: 900;
     top: 0;
